# oxplow

./: .gitignore  CLAUDE.md  Cargo.toml  DEV.md  MIGRATION_REVIEW.md  MIGRATION_REVIEW4.md  README.md  STATUS.md  clippy.toml  mise.toml  mkdocs.yml  oxplow.yaml  package.json  pyproject.toml  ux-test.md
.claude/commands/: note.md
.context/: agent-model.md  architecture.md  code-quality.md  data-model.md  editor-and-monaco.md  external-url-tabs.md  git-integration.md  ipc-and-stores.md  pages-and-tabs.md  parity-backlog.md  rich-text-editor.md  terminal.md  theming.md  usability.md  writing-tone.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: bunfig.toml  happydom.ts  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  Root.tsx  agent-context-dnd.test.ts  agent-context-dnd.ts  agent-context-ref.test.ts  agent-context-ref.ts  api-types.ts  api.ts  commands.test.ts  commands.ts  comment-reveal-bus.test.ts  comment-reveal-bus.ts  comments-filter.ts  (+36 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: external-url.json  main-window.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
crates/oxplow-app/: Cargo.toml
crates/oxplow-app/examples/: profile_snapshot_sweep.rs
crates/oxplow-app/src/: agent_command.rs  agent_pane.rs  agent_prompt.rs  agent_status_derive.rs  background_task.rs  blob_store.rs  code_quality_runner.rs  commit_indexer.rs  config_service.rs  diagnostics.rs  events.rs  file_ref_version.rs  followup.rs  git_service.rs  hook_ingest.rs  lib.rs  lsp_clients.rs  lsp_installer.rs  lsp_sessions.rs  page_ref_backfill.rs  recovery.rs  snapshot_capture.rs  snapshot_capture_registry.rs  task_service.rs  terminal_sessions.rs  thread_runtime.rs  wiki_drift.rs  wiki_notes.rs  wiki_notes_watch.rs  wiki_pages.rs  wiki_pages_watch.rs  work_item_service.rs  workspace_watch.rs
crates/oxplow-code-deps/: Cargo.toml
crates/oxplow-code-deps/src/: extractors.rs  lib.rs  tests.rs  zones.rs
crates/oxplow-code-dup/: Cargo.toml
crates/oxplow-code-dup/src/: lib.rs  tests.rs  tokenize.rs
crates/oxplow-code-metrics/: Cargo.toml
crates/oxplow-code-metrics/src/: lib.rs  spec.rs  tests.rs
crates/oxplow-config/: Cargo.toml
crates/oxplow-config/src/: lib.rs  recent.rs  session.rs
crates/oxplow-control-plane/: Cargo.toml
crates/oxplow-control-plane/src/: lib.rs
crates/oxplow-db/: Cargo.toml
crates/oxplow-db/migrations/: V10__page_visit_label.sql  V11__page_ref.sql  V12__task_effort_impacts.sql  V13__snapshot.sql  V13__snapshot_parent.sql  V14__snapshot_git_commit.sql  V15__file_snapshot_mtime.sql  V16__snapshot_stream_not_null.sql  V17__task_effort_snapshot_fk.sql  V18__drop_task_acceptance_criteria.sql  V19__drop_task_category_tags.sql  V1__initial_schema.sql  V20__file_ref_versioning.sql  V21__effort_acknowledged_path.sql  V22__comments.sql  V23__comment_resolved_at.sql  V2__drop_transient_runtime_tables.sql  V3__page_visit_thread_id.sql  V4__archive_streams_and_threads.sql  V5__rename_wiki_notes_to_wiki_pages.sql  V6__drop_stream_summary.sql  V7__wiki_page_dir_refs.sql  V8__rename_code_quality_tools.sql  V9__code_quality_scan_tree_version.sql
crates/oxplow-db/src/: agent_stores.rs  analytics_stores.rs  comment_store.rs  database.rs  effort_store.rs  lib.rs  page_ref_projections.rs  page_ref_store.rs  stream_store.rs  task_satellite.rs  task_store.rs  thread_store.rs  wiki_note_store.rs  wiki_note_thread_updates.rs  wiki_page_store.rs  wiki_page_thread_updates.rs  work_item_store.rs  work_satellite.rs
crates/oxplow-domain/: Cargo.toml
crates/oxplow-domain/src/: comment.rs  error.rs  hook.rs  ids.rs  lib.rs  refs.rs  stores.rs  stream.rs  task.rs  thread.rs  time.rs  tree_diff.rs  work_item.rs
crates/oxplow-fs-watch/: Cargo.toml
crates/oxplow-fs-watch/src/: lib.rs
crates/oxplow-git/: Cargo.toml
crates/oxplow-git/src/: blame.rs  branch.rs  branch_changes.rs  branch_ops.rs  co_change.rs  conflict.rs  lib.rs  log.rs  refs.rs  refs_watch.rs  repo.rs  status.rs  sync.rs  tree.rs  workspace.rs  worktree.rs
crates/oxplow-lsp/: Cargo.toml
crates/oxplow-lsp-installer/: Cargo.toml
crates/oxplow-lsp-installer/src/: installer.rs  lib.rs  package.rs  registry.rs  target.rs
crates/oxplow-lsp/src/: codec.rs  lib.rs  proxy.rs
crates/oxplow-mcp/: Cargo.toml
crates/oxplow-plugin/: Cargo.toml
crates/oxplow-plugin/assets/: AGENT_GUIDE.md  oxplow-mermaid.SKILL.md  oxplow-runtime.SKILL.md  oxplow-subagent.SKILL.md  oxplow-wiki-capture.SKILL.md  review-comments.md  work-next.md
crates/oxplow-plugin/src/: lib.rs
crates/oxplow-pty/: Cargo.toml
crates/oxplow-pty/src/: lib.rs
crates/oxplow-runtime/: Cargo.toml
crates/oxplow-session/: Cargo.toml
crates/oxplow-session/src/: lib.rs  thread_service.rs
crates/oxplow-tauri-ipc/: Cargo.toml
crates/oxplow-tauri-ipc/src/: commands.rs  error.rs  lib.rs  state.rs
crates/oxplow-tauri-ipc/src/commands/: agent_panes.rs  app.rs  background.rs  backlog.rs  branch.rs  churn.rs  code_quality.rs  comments.rs  config.rs  effort.rs  followup.rs  git.rs  hooks.rs  launch.rs  log.rs  lsp.rs  menu.rs  mod.rs  notes.rs  page_refs.rs  page_visit.rs  snapshot.rs  streams.rs  tasks.rs  terminal.rs  threads.rs  usage.rs  webview.rs  wiki.rs  wiki_freshness.rs  work_items.rs  workspace.rs
crates/oxplow-tauri-ipc/tests/: commands.rs  harness.rs
crates/oxplow-tmux/: Cargo.toml
crates/oxplow-tmux/src/: lib.rs
crates/oxplow-tree-source/: Cargo.toml
crates/oxplow-tree-source/src/: lib.rs
docs/: why.md
docs/getting-started/: concepts.md  first-stream.md  install.md
docs/guide/: agent-control.md  change-analysis.md  editor.md  local-history.md  notes.md  terminal.md  wiki.md  work-queue.md
docs/overrides/: home.html
docs/philosophy/: architecture-vision.md  beyond-vibe-coding.md  pair-programming.md
docs/reference/: keybindings.md  mcp-tools.md  settings.md
docs/stylesheets/: extra.css
packaging/homebrew/: README.md  oxplow.rb
scripts/: coverage-floors.py
tests-e2e.electron-archive/: README.md
(+192 files in other folders)
