[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "crates/oxplow-domain",
    "crates/oxplow-db",
    "crates/oxplow-config",
    "crates/oxplow-fs-watch",
    "crates/oxplow-git",
    "crates/oxplow-session",
    "crates/oxplow-runtime",
    "crates/oxplow-tmux",
    "crates/oxplow-pty",
    "crates/oxplow-lsp",
    "crates/oxplow-lsp-installer",
    "crates/oxplow-mcp",
    "crates/oxplow-app",
    "crates/oxplow-tauri-ipc",
    "crates/oxplow-plugin",
    "crates/oxplow-control-plane",
    "crates/oxplow-code-metrics",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.80"
authors = ["Nathan Voxland <nathan@voxland.net>"]
license = "MIT"
repository = "https://github.com/nvoxland/oxplow"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt", "codec"] }
futures = "0.3"
async-trait = "0.1"

# Serialization & types
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
specta = { version = "=2.0.0-rc.24", features = ["derive", "time", "serde_json"] }

# Error handling & logging
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# IDs / time
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

# DB
rusqlite = { version = "0.32", features = ["bundled", "time", "uuid", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
refinery = { version = "0.8", features = ["rusqlite"] }

# Filesystem
notify = "7.0"
notify-debouncer-full = "0.4"
tempfile = "3.14"

# Git
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }

# PTY
portable-pty = "0.8"
bytes = "1.8"

# LSP / JSON-RPC
lsp-types = "0.97"

# HTTP / archive (LSP installer)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
flate2 = "1.0"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
tar = "0.4"
sha2 = "0.10"
hex = "0.4"

# MCP
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }

# Tauri
tauri = { version = "2", features = [] }
tauri-build = "2"
tauri-specta = { version = "2.0.0-rc.24", features = ["derive", "typescript"] }
specta-typescript = "0.0.11"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"

# Code metrics (tree-sitter-based)
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"

# Internal
oxplow-domain = { path = "crates/oxplow-domain" }
oxplow-code-metrics = { path = "crates/oxplow-code-metrics" }
oxplow-db = { path = "crates/oxplow-db" }
oxplow-config = { path = "crates/oxplow-config" }
oxplow-fs-watch = { path = "crates/oxplow-fs-watch" }
oxplow-git = { path = "crates/oxplow-git" }
oxplow-session = { path = "crates/oxplow-session" }
oxplow-runtime = { path = "crates/oxplow-runtime" }
oxplow-tmux = { path = "crates/oxplow-tmux" }
oxplow-pty = { path = "crates/oxplow-pty" }
oxplow-lsp = { path = "crates/oxplow-lsp" }
oxplow-lsp-installer = { path = "crates/oxplow-lsp-installer" }
oxplow-mcp = { path = "crates/oxplow-mcp" }
oxplow-app = { path = "crates/oxplow-app" }
oxplow-tauri-ipc = { path = "crates/oxplow-tauri-ipc" }
oxplow-plugin = { path = "crates/oxplow-plugin" }
oxplow-control-plane = { path = "crates/oxplow-control-plane" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
