[package]
name = "oxplow-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
oxplow-domain = { workspace = true }
oxplow-db = { workspace = true }
oxplow-config = { workspace = true }
oxplow-fs-watch = { workspace = true }
oxplow-git = { workspace = true }
oxplow-session = { workspace = true }
oxplow-runtime = { workspace = true }
oxplow-tmux = { workspace = true }
oxplow-pty = { workspace = true }
oxplow-lsp = { workspace = true }
oxplow-lsp-installer = { workspace = true }
oxplow-code-metrics = { workspace = true }
oxplow-code-dup = { workspace = true }
oxplow-tree-source = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = "0.1"
futures = "0.3"
bytes = "1"
base64 = "0.22"
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }
async-trait = { workspace = true }
indexmap = "2.11"
parking_lot = "0.12"
fs2 = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
similar = "2"
rayon = "1"
uuid = { workspace = true }
tempfile = { workspace = true }
walkdir = "2.5"

[dev-dependencies]
git2 = { workspace = true }

[lints]
workspace = true
