[package]
name = "oxplow-code-deps"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
oxplow-code-metrics = { workspace = true }
tree-sitter = { workspace = true }
serde = { workspace = true }
specta = { workspace = true }

[lints]
workspace = true
