[package]
name = "oxplow-code-dup"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Grammar loading is delegated to oxplow-code-metrics so we don't
# duplicate the per-language tree-sitter mapping table.
oxplow-code-metrics = { workspace = true }
tree-sitter = { workspace = true }

[lints]
workspace = true
