[package]
name = "oxplow-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
oxplow-domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
specta = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = "6"
fs2 = "0.4"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
