[package]
name = "oxplow-control-plane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
oxplow-app = { workspace = true }
oxplow-domain = { workspace = true }
oxplow-mcp = { workspace = true }
oxplow-runtime = { workspace = true }

axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-service = "0.3"
hyper = "1"
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = { workspace = true }

rmcp = { version = "0.16", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
] }

tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = "0.12"
rand = "0.9"
base64 = "0.22"

[dev-dependencies]
tempfile = { workspace = true }
