[package]
name = "oxplow-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
