[package]
name = "oxplow-git"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
oxplow-domain = { workspace = true }
oxplow-db = { workspace = true }
oxplow-fs-watch = { workspace = true }
git2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
specta = { workspace = true }
time = { workspace = true }

[dependencies.serde_json]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
