[package]
name = "oxplow-lsp-installer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
zip = { workspace = true }
tar = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
