[package]
name = "oxplow-pty"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
oxplow-domain = { workspace = true }
portable-pty = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
specta = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
