[package]
name = "oxplow-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
oxplow-domain = { workspace = true }
oxplow-db = { workspace = true }
oxplow-git = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
specta = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
git2 = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
