[package]
name = "oxplow-tauri-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
oxplow-domain = { workspace = true }
oxplow-session = { workspace = true }
oxplow-app = { workspace = true }
oxplow-config = { workspace = true }
tauri = { workspace = true }
tauri-specta = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
specta-typescript = { workspace = true }
oxplow-db = { workspace = true }
oxplow-git = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }
