[package]
name = "oxplow-tree-source"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
git2 = { workspace = true }
serde = { workspace = true }
specta = { workspace = true }
thiserror = { workspace = true }
walkdir = "2.5"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
